data-analyzer/deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: data-analyzer
spec:
  selector:
    matchLabels:
      app: data-analyzer
  replicas: 1
  template:
    metadata:
      labels:
        app: data-analyzer
    spec:
      containers:
      - name: master
        image: ash002019/agile-avengers-data-analyzer
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 200Mi
        ports:
        - containerPort: 5000
