data-analyzer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16m
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  # - host: localhost
  - http:
      paths:
      - path: /analyzer/(.*)
        pathType: Prefix
        backend:
          service:
            name: data-analyzer-svc
            port:
              number: 5000
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 5000
